src/it/polito/yutengfei/RIIF/RIIF2Parser.java
// Generated from /usr/Intellij/ANtlr4WorkSpace/RIIF2_V3/RIIF2.g4 by ANTLR 4.5.3
package it.polito.yutengfei.RIIF;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class RIIF2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, COMPONENT=44, END_COMPONENT=45, 
		ENVIRONMENT=46, END_ENVIRONMENT=47, REQUIREMENT=48, END_REQUIREMENT=49, 
		CHILD_COMPONENT=50, FAIL_MODE=51, EXTENDS=52, ASSIGN=53, ASSERT=54, INPUT=55, 
		OUTPUT=56, PARAMETER=57, CONSTANT=58, TYPE_FLOAT=59, TYPE_INTEGER=60, 
		TYPE_STRING=61, TYPE_ENUM=62, FUNC_AGG_SINGLE=63, FUNC_GT_N_FAIL=64, FUNC_LOG=65, 
		FUNC_EXP=66, TEMPLATE=67, END_TEMPLATE=68, IMPOSE=69, ABSTRACT=70, IMPLEMENTS=71, 
		SELF=72, SET=73, TYPE_TABLE=74, PLATFORM=75, StringLiteral=76, FloatingPointLiteral=77, 
		DecimalLiteral=78, Ident=79, HierIdent=80, AttrIdent=81, AssocDecl=82, 
		AssocInstanceIdent=83, AssocHierIdent=84, AssocAttrIdent=85, WS=86, COMMENT=87, 
		LINE_COMMENT=88;
	public static final int
		RULE_program = 0, RULE_declaration = 1, RULE_templateDecl = 2, RULE_templateBodyElement = 3, 
		RULE_abstractDecl = 4, RULE_abstractFailModeDecl = 5, RULE_abstractConstanceDecl = 6, 
		RULE_abstractParameterDecl = 7, RULE_abstractAttributeDecl = 8, RULE_abstractPlatformDecl = 9, 
		RULE_imposeAssignment = 10, RULE_componentDecl = 11, RULE_componentBodyElement = 12, 
		RULE_setTemplate = 13, RULE_environmentDecl = 14, RULE_environmentBodyElements = 15, 
		RULE_requirementDecl = 16, RULE_parameterDecl = 17, RULE_envParameterDecl = 18, 
		RULE_constanceDecl = 19, RULE_childComponentDecl = 20, RULE_failModeDecl = 21, 
		RULE_assignment = 22, RULE_assertion = 23, RULE_expression = 24, RULE_primary = 25, 
		RULE_listConstructor = 26, RULE_arrayConstructor = 27, RULE_constructorType = 28, 
		RULE_tableColumns = 29, RULE_attrIdent = 30, RULE_funcCall = 31, RULE_funcName = 32, 
		RULE_funcArg = 33, RULE_literal = 34, RULE_complexType = 35, RULE_vector = 36, 
		RULE_primitiveType = 37, RULE_enumType = 38;
	public static final String[] ruleNames = {
		"program", "declaration", "templateDecl", "templateBodyElement", "abstractDecl", 
		"abstractFailModeDecl", "abstractConstanceDecl", "abstractParameterDecl", 
		"abstractAttributeDecl", "abstractPlatformDecl", "imposeAssignment", "componentDecl", 
		"componentBodyElement", "setTemplate", "environmentDecl", "environmentBodyElements", 
		"requirementDecl", "parameterDecl", "envParameterDecl", "constanceDecl", 
		"childComponentDecl", "failModeDecl", "assignment", "assertion", "expression", 
		"primary", "listConstructor", "arrayConstructor", "constructorType", "tableColumns", 
		"attrIdent", "funcCall", "funcName", "funcArg", "literal", "complexType", 
		"vector", "primitiveType", "enumType"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "':'", "':='", "'='", "','", "'<'", "'>'", "'+'", "'-'", 
		"'~'", "'!'", "'*'", "'/'", "'%'", "'<='", "'>='", "'=='", "'!='", "'&'", 
		"'^'", "'|'", "'&&'", "'||'", "'?'", "'+='", "'-='", "'*='", "'/='", "'&='", 
		"'|='", "'^='", "'>>='", "'>>>='", "'<<='", "'%='", "'('", "')'", "'{'", 
		"'}'", "'['", "']'", "'#'", "'''", "'component'", "'endcomponent'", "'environment'", 
		"'endenvironment'", "'requirement'", "'endrequirement'", "'child_component'", 
		"'fail_mode'", "'extends'", "'assign'", "'assert'", "'input'", "'output'", 
		"'parameter'", "'constant'", "'float'", "'integer'", "'string'", "'enum'", 
		"'agg_single_fail'", "'agg_gt_n_fail'", "'LOG'", "'EXP'", "'template'", 
		"'endtemplate'", "'impose'", "'abstract'", "'implements'", "'self'", "'set'", 
		"'table'", "'platform'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, "COMPONENT", "END_COMPONENT", 
		"ENVIRONMENT", "END_ENVIRONMENT", "REQUIREMENT", "END_REQUIREMENT", "CHILD_COMPONENT", 
		"FAIL_MODE", "EXTENDS", "ASSIGN", "ASSERT", "INPUT", "OUTPUT", "PARAMETER", 
		"CONSTANT", "TYPE_FLOAT", "TYPE_INTEGER", "TYPE_STRING", "TYPE_ENUM", 
		"FUNC_AGG_SINGLE", "FUNC_GT_N_FAIL", "FUNC_LOG", "FUNC_EXP", "TEMPLATE", 
		"END_TEMPLATE", "IMPOSE", "ABSTRACT", "IMPLEMENTS", "SELF", "SET", "TYPE_TABLE", 
		"PLATFORM", "StringLiteral", "FloatingPointLiteral", "DecimalLiteral", 
		"Ident", "HierIdent", "AttrIdent", "AssocDecl", "AssocInstanceIdent", 
		"AssocHierIdent", "AssocAttrIdent", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "RIIF2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public RIIF2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(RIIF2Parser.EOF, 0); }
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(78);
				declaration();
				}
				}
				setState(81); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 44)) & ~0x3f) == 0 && ((1L << (_la - 44)) & ((1L << (COMPONENT - 44)) | (1L << (ENVIRONMENT - 44)) | (1L << (REQUIREMENT - 44)) | (1L << (TEMPLATE - 44)))) != 0) );
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ComponentDeclContext componentDecl() {
			return getRuleContext(ComponentDeclContext.class,0);
		}
		public EnvironmentDeclContext environmentDecl() {
			return getRuleContext(EnvironmentDeclContext.class,0);
		}
		public RequirementDeclContext requirementDecl() {
			return getRuleContext(RequirementDeclContext.class,0);
		}
		public TemplateDeclContext templateDecl() {
			return getRuleContext(TemplateDeclContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		try {
			setState(89);
			switch (_input.LA(1)) {
			case COMPONENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				componentDecl();
				}
				break;
			case ENVIRONMENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				environmentDecl();
				}
				break;
			case REQUIREMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(87);
				requirementDecl();
				}
				break;
			case TEMPLATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				templateDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateDeclContext extends ParserRuleContext {
		public TerminalNode TEMPLATE() { return getToken(RIIF2Parser.TEMPLATE, 0); }
		public List<TerminalNode> Ident() { return getTokens(RIIF2Parser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(RIIF2Parser.Ident, i);
		}
		public TerminalNode END_TEMPLATE() { return getToken(RIIF2Parser.END_TEMPLATE, 0); }
		public TerminalNode EXTENDS() { return getToken(RIIF2Parser.EXTENDS, 0); }
		public List<TemplateBodyElementContext> templateBodyElement() {
			return getRuleContexts(TemplateBodyElementContext.class);
		}
		public TemplateBodyElementContext templateBodyElement(int i) {
			return getRuleContext(TemplateBodyElementContext.class,i);
		}
		public TemplateDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterTemplateDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitTemplateDecl(this);
		}
	}

	public final TemplateDeclContext templateDecl() throws RecognitionException {
		TemplateDeclContext _localctx = new TemplateDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_templateDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(TEMPLATE);
			setState(92);
			match(Ident);
			setState(95);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(93);
				match(EXTENDS);
				setState(94);
				match(Ident);
				}
			}

			setState(97);
			match(T__0);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 51)) & ~0x3f) == 0 && ((1L << (_la - 51)) & ((1L << (FAIL_MODE - 51)) | (1L << (IMPOSE - 51)) | (1L << (ABSTRACT - 51)))) != 0)) {
				{
				{
				setState(98);
				templateBodyElement();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(END_TEMPLATE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TemplateBodyElementContext extends ParserRuleContext {
		public AbstractDeclContext abstractDecl() {
			return getRuleContext(AbstractDeclContext.class,0);
		}
		public ImposeAssignmentContext imposeAssignment() {
			return getRuleContext(ImposeAssignmentContext.class,0);
		}
		public TemplateBodyElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_templateBodyElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterTemplateBodyElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitTemplateBodyElement(this);
		}
	}

	public final TemplateBodyElementContext templateBodyElement() throws RecognitionException {
		TemplateBodyElementContext _localctx = new TemplateBodyElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_templateBodyElement);
		try {
			setState(108);
			switch (_input.LA(1)) {
			case FAIL_MODE:
			case ABSTRACT:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				abstractDecl();
				}
				break;
			case IMPOSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				imposeAssignment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbstractDeclContext extends ParserRuleContext {
		public AbstractConstanceDeclContext abstractConstanceDecl() {
			return getRuleContext(AbstractConstanceDeclContext.class,0);
		}
		public AbstractParameterDeclContext abstractParameterDecl() {
			return getRuleContext(AbstractParameterDeclContext.class,0);
		}
		public AbstractAttributeDeclContext abstractAttributeDecl() {
			return getRuleContext(AbstractAttributeDeclContext.class,0);
		}
		public AbstractPlatformDeclContext abstractPlatformDecl() {
			return getRuleContext(AbstractPlatformDeclContext.class,0);
		}
		public AbstractFailModeDeclContext abstractFailModeDecl() {
			return getRuleContext(AbstractFailModeDeclContext.class,0);
		}
		public FailModeDeclContext failModeDecl() {
			return getRuleContext(FailModeDeclContext.class,0);
		}
		public AbstractDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstractDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterAbstractDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitAbstractDecl(this);
		}
	}

	public final AbstractDeclContext abstractDecl() throws RecognitionException {
		AbstractDeclContext _localctx = new AbstractDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_abstractDecl);
		try {
			setState(116);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				abstractConstanceDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				abstractParameterDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				abstractAttributeDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				abstractPlatformDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				abstractFailModeDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(115);
				failModeDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbstractFailModeDeclContext extends ParserRuleContext {
		public TerminalNode ABSTRACT() { return getToken(RIIF2Parser.ABSTRACT, 0); }
		public TerminalNode FAIL_MODE() { return getToken(RIIF2Parser.FAIL_MODE, 0); }
		public TerminalNode Ident() { return getToken(RIIF2Parser.Ident, 0); }
		public AbstractFailModeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstractFailModeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterAbstractFailModeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitAbstractFailModeDecl(this);
		}
	}

	public final AbstractFailModeDeclContext abstractFailModeDecl() throws RecognitionException {
		AbstractFailModeDeclContext _localctx = new AbstractFailModeDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_abstractFailModeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ABSTRACT);
			setState(119);
			match(FAIL_MODE);
			setState(120);
			match(Ident);
			setState(121);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbstractConstanceDeclContext extends ParserRuleContext {
		public TerminalNode ABSTRACT() { return getToken(RIIF2Parser.ABSTRACT, 0); }
		public TerminalNode CONSTANT() { return getToken(RIIF2Parser.CONSTANT, 0); }
		public TerminalNode Ident() { return getToken(RIIF2Parser.Ident, 0); }
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ListConstructorContext listConstructor() {
			return getRuleContext(ListConstructorContext.class,0);
		}
		public AbstractConstanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abstractConstanceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).enterAbstractConstanceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof RIIF2Listener ) ((RIIF2Listener)listener).exitAbstractConstanceDecl(this);
		}
	}

	public final AbstractConstanceDeclContext abstractConstanceDecl() throws RecognitionException {
		AbstractConstanceDeclContext _localctx = new AbstractConstanceDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_abstractConstanceDecl);
		int _la;
		try {
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(ABSTRACT);
				setState(124);
				match(CONSTANT);
				setState(125);
				match(Ident);
				setState(126);
				match(T__1);
				setState(127);
				primitiveType();
				setState(130);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(128);
					match(T__2);
					setState(129);
					expression(0);
					}
				}

				setState(132);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134);
				match(ABSTRACT);
				setState(135);
				match(CONSTANT);
				setState(136);
				match(Ident);
				setState(137);
				match(T__2);
				setState(138);
				listConstructor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
